fixed responsive galleries and added hamburger menu

--- a/css/partials/_galleries.scss
+++ b/css/partials/_galleries.scss
@@ -1,76 +1,46 @@
 section.project{
 	width: 100%;
-	ul.menu.project-menu{
-		margin: auto;
-		width: 50%;
-		justify-content:space-around;
-	}
 }
 
-ul.menu.project-menu{
+.project-menu{
 	display: flex;
 	flex-direction:row;
-	align-items: center;
-	justify-content: space-between;
-	@media (max-width: 940px) {
+	// align-items: center;
+	justify-content: space-around;
+	width: 70%;
+	margin: 0 auto;
+	@media (max-width: 480px){
 		display: flex;
 		flex-direction:column;
 		align-items: center;
-		justify-content: space-between;}
-		li.menu__link a, li.menu__link.menu__link--active a{
-			flex: 1 0 calc(100% / 8);
-			text-align: center;
-			padding-left: 30px;
-			@media (max-width: 940px) {
-				padding: 10% 0;
-			}
+		justify-content:space-between;
+		li{
+			margin-bottom: 20px;
 		}
+	}
 }
-
 
 ul.gallery{
 	display: flex;
 	flex-direction:row;
 	justify-content:space-between;
 	flex-wrap:wrap;
-	padding-top:45px;}
+	padding-top:45px;
+	padding-bottom: 45px;
 	li.gallery__cell.gallery__cell--square{
-		width: calc(100% / 3 - 4.5rem);
-		margin-right:4.5rem;
-		margin-bottom:4.5rem;
-		&:nth-child(3n+3){
-			margin-right:0;	
+		width: calc(100% / 3 - 10px);
+		margin-bottom:10px;
+		@media (max-width: 940px){
+				width: calc(100% / 2 - 10px);
+				margin-bottom:10px;
+		}
+		@media (max-width: 480px){
+				width: 100%;
+				margin-bottom:10px;
 		}
 	}
-	
-	@media (max-width: 940px){
-		ul.gallery{
-			display: flex;
-			flex-direction:row;
-			justify-content:space-between;
-			align-items:center;
-			flex-wrap:wrap;
-			padding-top:45px;}
-			li.gallery__cell.gallery__cell--square{
-				width: calc(100% / 2 - 4.5rem);
-				margin-right:0;
-				margin-bottom:4.5rem;
-			
-				}
-			}
-	@media (max-width: 768px){
-		ul.gallery{
-			display: flex;
-			flex-direction:column;
-			align-items:center;
-			flex-wrap:wrap;
-			padding-top:45px;}
-			li.gallery__cell.gallery__cell--square{
-				width: 350px;
-				margin-right:0;
-				margin-bottom:4.5rem;
-				}
-			}
+}
+
 
 figure{
 	position:relative;
@@ -81,8 +51,11 @@ figure{
 		display: flex;
 		flex-direction:column;
 		justify-content:center;
-		
-		}
+	}
+	img{
+		display: block;
+		width: 100%;
+	}
 	}
 
 	figcaption{
@@ -98,16 +71,25 @@ figure{
 		transition: all 0.5s;
 		text-align: center;
 		opacity: 0;
-		p{padding-bottom: 30px;}
+		p{
+			padding-bottom: 30px;
+		}
+		@media (max-width: 940px){
+			opacity: 1;
+			top: 75%;
+			p{
+				padding-bottom: 0;
+			}
+		}
+		@media (max-width: 768px){
+			opacity: 1;
+			top: 50%;
+		}
+		@media (max-width: 480px){
+			opacity: 1;
+			top: 80%;
+		}
 	}
-		
-
-		
-	
-
-
-
-
 
 // STAFF 
 
@@ -117,27 +99,36 @@ section.staff{
 	padding-bottom: 120px;
 }
 
-ul.gallery{
+.staff-gallery{
 	display: flex;
 	flex-direction:row;
-	flex-wrap:wrap;}
-	li.gallery__cell.gallery__cell--portrait{
-		width: calc(100% / 3 - 3rem);
-		margin-right:3rem;
-		&:nth-child(3n+3){
-			margin-right:0;
+	flex-wrap:wrap;
+	justify-content:space-between;
+	align-items:center;
+	@media (max-width: 940px){
+		justify-content:center;
+		align-items:center;
+
+	}
+}
+
+li.gallery__cell.gallery__cell--portrait{
+	width: calc(100% / 3 - 20px);
+	margin-right: 20px;
+	margin-bottom: 20px;
+	&:nth-child(3n+3){
+		margin-right:0;
+	}
+	@media (max-width: 940px){
+		width: calc(50% - 20px);
+	}
+	@media (max-width: 768px){
+		width: 100%;
+		figcaption{
+			opacity: 1;
+			top: 80%;
 		}
 	}
+}
 
-	@media (max-width: 940px){
-		ul.gallery{
-			display: flex;
-			flex-direction:column;
-			flex-wrap:wrap;}
-			li.gallery__cell.gallery__cell--portrait{
-				width: 345px;
-				margin-bottom:30px;
-				}
-			}
-	
 
